# reversible-solvers

./: .gitignore  README.md  pyproject.toml
data/models/: vf_sir.eqx
data/results/complexity/: checkpointed_mems.npy  checkpointed_times.npy  reversible_complexity.csv
examples/: sir.py
experiments/: complexity.py  plot_complexity.py  run_complexity.sh
experiments/cdes/: download_data.py  main.py  test_runtime.py
experiments/charactertrajectories/: load_data.py  main.py  run.sh  run_checkpointed.sh
experiments/charactertrajectories/data/: labels.npy  runtime.txt
experiments/complexity/: complexity.py  run_complexity.sh
experiments/complexity/data/: recursive_100.csv  recursive_1000.csv  recursive_1400.csv  recursive_1600.csv  recursive_1800.csv  (+28 more)
experiments/convergence/: convergence.py  main.py
experiments/odes/: fitzhugh_nagumo.py  lorenz.py  lotka_volterra.py  pendulum.py  run_checkpointed.sh  seirs.py  sir.py  sir.txt  white_dwarf.py
experiments/physical_systems/: oscillator.py  pendulum.py  run_checkpointed.sh
experiments/realdata/: main.py  pendulum.py  run_checkpointed.sh  run_checkpointed_pendulum.sh  test_bosh3.py
experiments/sdes/: generator_reversible.eqx  main.py  recursive_1.eqx  recursive_1_new.eqx  reversible_1.eqx  reversible_1_new.eqx  run_checkpointed.sh  runtime.txt
experiments/speed/: mwe.py
experiments/white_dwarf/: run_checkpointed.sh  white_dwarf.py
reversible/: __init__.py  _checkpointing.py  _data.py  _models.py  _odes.py  _plotting.py  _training.py
reversible/tracking/: memory.py  track_gpu_memory.sh
(+71 files in other folders)
